--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "divinerecursors.github.io"]
 	path = divinerecursors.github.io
 	url = https://github.com/divinerecursors/divinerecursors.github.io
+[submodule "themes/pure"]
+	path = themes/pure
+	url = https://github.com/xiaoheiAh/hugo-theme-pure
